--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -2,15 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Fire Sans", sans-serif;
+  font-family: "Fira Sans", sans-serif;
 }
 
 header {
   padding-top: 50px;
-  padding-top: 50px;
+  padding-bottom: 50px;
 }
 header h1 {
-  color: #aaa;
+  color: #AAA;
   font-size: 36px;
   font-weight: 400;
   text-align: center;
@@ -112,10 +112,14 @@ header h1 strong {
   display: block;
   width: 100%;
   height: 350px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
   border-radius: 16px;
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
+  aspect-ratio: 2/3;
+  background-color: #EEE;
   transition: 0.4s;
 }
 .content-wrap main .anime-list .anime-card h3 {
