--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,26 +1,25 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 
-
-    font-family: 'Fire Sans', sans-serif;
+	font-family: 'Fira Sans', sans-serif;
 }
 
-header{
-    padding-top: 50px;
-    padding-top: 50px;
+header {
+	padding-top: 50px;
+	padding-bottom: 50px;
 
-    h1{
-        color: #aaa;
-        font-size: 36px;
-        font-weight: 400;
-        text-align: center;
+	h1 {
+		color: #AAA;
+		font-size: 36px;
+		font-weight: 400;
+		text-align: center;
 
-        strong{
-            color: #313131;
-        }
-    }
+		strong {
+			color: #313131;
+		}
+	}
 }
 
 .content-wrap {
@@ -127,9 +126,12 @@ header{
 						display: block;
 						width: 100%;
 						height: 350px;
-						object-fit: cover;
+						object-fit: contain;
+						object-position: center;
 						border-radius: 16px;
 						box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
+						aspect-ratio: 2 / 3;
+						background-color: #EEE;
 
 						transition: 0.4s;
 					}
