--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -38,28 +38,47 @@ header {
 				color: #313131;
 				font-size: 24px;
 				margin-bottom: 16px;
+				justify-content: center;
+				text-align: center;
 			}
 
 			a {
 				display: block;
 				padding: 8px 16px;
-				text-align: left;
+				text-align: center;
+				justify-content: center;
 
 				color: #888;
 				font-size: 16px;
 				margin-bottom: 16px;
 
-				background-color: #EEE;
 				border-radius: 999px;
 				text-decoration: none;
 
 				transition: 0.4s;
+				.image-top{
+					img{
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+						border-radius: 10px;
+						transition: 0.4s;
 
-				&:hover {
-					background-color: #313131;
-					color: #AAA;
+						&:hover{
+							transform: scale(1.05);
+							box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+							color: #888;
+						}
+					}
 				}
+
+				.anime-card:hover {
+					box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+					transform: scale(1.05);
+				}
+
 			}
+
 		}
 	}
 
@@ -124,18 +143,16 @@ header {
 
 					img {
 						display: block;
-						width: 100%;
-						height: 350px;
+						width: 23.5rem;
+						height: 35rem;
 						object-fit: contain;
-						object-position: center;
 						border-radius: 16px;
 						box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
-						aspect-ratio: 2 / 3;
-						background-color: #EEE;
 
 						transition: 0.4s;
 					}
 				}
+
 
 				h3 {
 					color: #313131;
