--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -21,6 +21,50 @@ header h1 strong {
 
 .content-wrap {
   display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.content-wrap h2 {
+  margin-top: 10rem;
+}
+.content-wrap .popular-anime-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.content-wrap .popular-anime-container .popular-anime-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+  padding: 20px;
+  margin: 10px;
+}
+.content-wrap .popular-anime-container .popular-anime-card img {
+  display: block;
+  width: 17rem;
+  height: 30rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  transition: 0.4s;
+}
+.content-wrap .popular-anime-container .popular-anime-card h3 {
+  font-size: 18px;
+  margin: 10px 0;
+  flex-grow: 1;
+}
+.content-wrap .popular-anime-container .popular-anime-card a {
+  margin-top: auto;
+  padding: 10px 16px;
+  color: #313131;
+  border-radius: 5px;
+  text-decoration: none;
+}
+.content-wrap .popular-anime-container .popular-anime-card img:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+  color: #888;
 }
 .content-wrap aside {
   flex: 1 1 250px;
@@ -60,20 +104,19 @@ header h1 strong {
 }
 .content-wrap aside nav a .image-top img:hover {
   transform: scale(1.05);
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
   color: #888;
-}
-.content-wrap aside nav a .anime-card:hover {
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
-  transform: scale(1.05);
 }
 .content-wrap main {
   flex: 1 1 0%;
   padding: 0px 16px;
+  height: 50px;
 }
 .content-wrap main .main-head {
   display: flex;
   justify-content: flex-end;
+  width: 100%;
+  padding: 0 20px;
 }
 .content-wrap main .main-head .search-box {
   display: flex;
@@ -87,8 +130,10 @@ header h1 strong {
   background: none;
   outline: none;
   border: none;
+  position: absolute;
   display: block;
-  width: 100%;
+  width: 390px;
+  height: 38px;
   max-width: 400px;
   padding: 16px;
   border-radius: 999px;
