--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,6 +24,62 @@ header {
 
 .content-wrap {
 	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
+
+	h2{
+		margin-top: 10rem;
+	}
+
+	.popular-anime-container {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+
+		.popular-anime-card{
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center; 
+			gap: 16px; 
+			padding: 20px;
+			margin: 10px;
+
+			img{
+				display: block;
+				width: 17rem;
+				height: 30rem;
+				object-fit: cover;
+				border-radius: 10px;
+				transition: 0.4s;
+		}
+
+			h3{
+				font-size: 18px;
+				margin: 10px 0;
+				flex-grow: 1;
+			}
+
+		a{
+			margin-top: auto;
+			padding: 10px 16px;
+			color: #313131;
+			border-radius: 5px;
+			text-decoration: none;
+		}
+
+		img:hover{
+			transform: scale(1.05);
+			box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+			color: #888;
+			
+			
+		}
+	}
+
+
+
+	}
+
 
 	aside {
 		flex: 1 1 250px;
@@ -56,6 +112,7 @@ header {
 				text-decoration: none;
 
 				transition: 0.4s;
+
 				.image-top{
 					img{
 						width: 100%;
@@ -66,15 +123,11 @@ header {
 
 						&:hover{
 							transform: scale(1.05);
-							box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+							box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
 							color: #888;
+							
 						}
 					}
-				}
-
-				.anime-card:hover {
-					box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
-					transform: scale(1.05);
 				}
 
 			}
@@ -85,10 +138,13 @@ header {
 	main {
 		flex: 1 1 0%;
 		padding: 0px 16px;
+		height: 50px;
 
 		.main-head {
 			display: flex;
 			justify-content: flex-end;
+			width: 100%;
+			padding: 0 20px;
 
 			.search-box {
 				display: flex;
@@ -100,9 +156,11 @@ header {
 					background: none;
 					outline: none;
 					border: none;
+					position: absolute;
 
 					display: block;
-					width: 100%;
+					width: 390px;
+					height: 38px;
 					max-width: 400px;
 					padding: 16px;
 					border-radius: 999px;
@@ -128,6 +186,8 @@ header {
 			margin-top: 32px;
 			margin: 32px -8px 0px;
 
+
+			
 			.anime-card {
 				flex: 1 1 33.333%;
 				max-width: 33.333%;
