--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -26,11 +26,13 @@ header h1 strong {
 }
 .content-wrap h2 {
   margin-top: 10rem;
+  margin-left: 1rem;
 }
 .content-wrap .popular-anime-container {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  height: 100%;
 }
 .content-wrap .popular-anime-container .popular-anime-card {
   display: flex;
@@ -95,7 +97,7 @@ header h1 strong {
   transition: 0.4s;
 }
 .content-wrap aside nav a .image-top img {
-  width: 100%;
+  width: 15rem;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
